changed way ending buttons receive their dimmensions to solve off center text issue

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -87,11 +87,23 @@ $gear-tooth-width: 50%; //this is defined as percentage of diagonal width
   }
 
   &__btn {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
-    height: 0;
-    padding-top: 50%;
-    padding-bottom: 50%;
     border-radius: 50%;
     border: none;
+  }
+
+  &__end {
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    &::before {
+      content: "";
+      padding-top: 100%;
+      display: block;
+    }
   }
 }
